# YACMiner

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  SCRYPT-README  aclocal.m4  adl.c  adl.h  api.c  autogen.sh  code_flow.txt  config.h.in  configure  configure.ac  driver-opencl.c  driver-opencl.h  example.conf  miner.h  ocl.c  ocl.h  scrypt-chacha-flexible.cl  scrypt-chacha.cl  scrypt-chacha.cl.14  scrypt-jane.c  scrypt-jane.h  scrypt.c  scrypt.h  scrypt140202.cl  util.c  windows-build.txt  yacminer.c  yacoin-schedule.txt
ccan/: Makefile.in
compat/: Makefile.in
compat/jansson/: Makefile.in
lib/: Makefile.in
